更新signal-6 同步生成ttf

--- a/index.html
+++ b/index.html
@@ -783,6 +783,8 @@
 
       <a href="#signal-5" id="signal-5" data-icon="signal-5"></a>
 
+      <a href="#signal-6" id="signal-6" data-icon="signal-6"></a>
+
       <a href="#signal-roaming" id="signal-roaming" data-icon="signal-roaming"></a>
 
       <a href="#signal-sim1" id="signal-sim1" data-icon="signal-sim1"></a>
@@ -1591,6 +1593,8 @@
       <li>* signal-4</li>
 
       <li>* signal-5</li>
+
+      <li>* signal-6</li>
 
       <li>* signal-roaming</li>
 
