Ian Liu's avatarIan Liu deleted branch v3.20.0bump at shared / gaia-icons      同步KaiOS上的gaia-icons更新到v3.20.0
Ian Liu's avatarIan Liu deleted branch v3.20.0bump at shared / gaia-icons      同步KaiOS上的gaia-icons更新到v3.20.0

--- a/index.html
+++ b/index.html
@@ -389,9 +389,13 @@
 
       <a href="#check-on" id="check-on" data-icon="check-on"></a>
 
+      <a href="#chess" id="chess" data-icon="chess"></a>
+
       <a href="#circular-arrow-up" id="circular-arrow-up" data-icon="circular-arrow-up"></a>
 
       <a href="#coffee" id="coffee" data-icon="coffee"></a>
+
+      <a href="#compass" id="compass" data-icon="compass"></a>
 
       <a href="#compose" id="compose" data-icon="compose"></a>
 
@@ -412,6 +416,8 @@
       <a href="#drive-optical" id="drive-optical" data-icon="drive-optical"></a>
 
       <a href="#drive-removable" id="drive-removable" data-icon="drive-removable"></a>
+
+      <a href="#duck" id="duck" data-icon="duck"></a>
 
       <a href="#edge" id="edge" data-icon="edge"></a>
 
@@ -497,7 +503,11 @@
 
       <a href="#gallery" id="gallery" data-icon="gallery"></a>
 
+      <a href="#gamepad" id="gamepad" data-icon="gamepad"></a>
+
       <a href="#gasoline" id="gasoline" data-icon="gasoline"></a>
+
+      <a href="#ghost" id="ghost" data-icon="ghost"></a>
 
       <a href="#go-to-end" id="go-to-end" data-icon="go-to-end"></a>
 
@@ -905,6 +915,10 @@
 
       <a href="#privacy" id="privacy" data-icon="privacy"></a>
 
+      <a href="#purchase" id="purchase" data-icon="purchase"></a>
+
+      <a href="#puzzle" id="puzzle" data-icon="puzzle"></a>
+
       <a href="#radio-off" id="radio-off" data-icon="radio-off"></a>
 
       <a href="#radio-on" id="radio-on" data-icon="radio-on"></a>
@@ -932,6 +946,8 @@
       <a href="#restaurant" id="restaurant" data-icon="restaurant"></a>
 
       <a href="#roaming" id="roaming" data-icon="roaming"></a>
+
+      <a href="#rocket" id="rocket" data-icon="rocket"></a>
 
       <a href="#route" id="route" data-icon="route"></a>
 
@@ -1418,9 +1434,13 @@
 
       <li>* check-on</li>
 
+      <li>* chess</li>
+
       <li>* circular-arrow-up</li>
 
       <li>* coffee</li>
+
+      <li>* compass</li>
 
       <li>* compose</li>
 
@@ -1441,6 +1461,8 @@
       <li>* drive-optical</li>
 
       <li>* drive-removable</li>
+
+      <li>* duck</li>
 
       <li>* edge</li>
 
@@ -1526,7 +1548,11 @@
 
       <li>* gallery</li>
 
+      <li>* gamepad</li>
+
       <li>* gasoline</li>
+
+      <li>* ghost</li>
 
       <li>* go-to-end</li>
 
@@ -1934,6 +1960,10 @@
 
       <li>* privacy</li>
 
+      <li>* purchase</li>
+
+      <li>* puzzle</li>
+
       <li>* radio-off</li>
 
       <li>* radio-on</li>
@@ -1961,6 +1991,8 @@
       <li>* restaurant</li>
 
       <li>* roaming</li>
+
+      <li>* rocket</li>
 
       <li>* route</li>
 
